<resources>
    <string name="app_name">DXe Test App</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="dxe_simple_mobile_app">**** DXe Simple Mobile App ****</string>
    <string name="scan_start">Scan-Start</string>
    <string name="telemetry_start">Telemetry-Start</string>
    <string name="ota_start">OTA-Start</string>
    <string name="_00_00_00_00_00_00">00:00:00:00:00:00</string>

</resources>