<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/circcleProgressbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#2196F3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2196F3"
        android:text="@string/scan_start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/progressBarScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberMAC" />

    <Button
        android:id="@+id/button2Telemetry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2196F3"
        android:text="@string/telemetry_start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button3OTA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarScan" />

    <Button
        android:id="@+id/button3OTA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2196F3"
        android:text="@string/ota_start"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2Ota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2Telemetry" />

    <EditText
        android:id="@+id/editTextNumberMAC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:autofillHints=""
        android:digits="0123456789:"
        android:ems="10"
        android:hint="@string/_00_00_00_00_00_00"
        android:inputType="number|time"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBarScan"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2Telemetry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonScan" />

    <ProgressBar
        android:id="@+id/progressBar2Ota"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3OTA" />

    <TextView
        android:id="@+id/textViewLogData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:focusable="auto"
        android:maxLines="36655"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:text="@string/dxe_simple_mobile_app"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2Ota" />

</androidx.constraintlayout.widget.ConstraintLayout>